feat: — добавила в классы контроллеры обработку новых эндпоинтов — добавила в классе сервис пользователя получение списка друзей конкретного пользователя по id fix: — переделала систему хранения друзей пользователей