@@ -2,14 +2,15 @@ package ru.yandex.practicum.filmorate.service;
 
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import ru.yandex.practicum.filmorate.constant.Constants;
 import ru.yandex.practicum.filmorate.exceptions.UserNotFoundException;
 import ru.yandex.practicum.filmorate.model.User;
 import ru.yandex.practicum.filmorate.storage.user.InMemoryUserStorage;
 import ru.yandex.practicum.filmorate.validation.ValidationUser;
 
+import java.util.HashMap;
 import java.util.List;
-import java.util.Set;
-import java.util.stream.Collectors;
+import java.util.Map;
 
 @Service
 @RequiredArgsConstructor
@@ -21,45 +22,57 @@ public class UserService {
     // метод для добавления в друзья
     public String addFriend(Integer userId, Integer friendId) {
         if (!inMemoryUserStorage.getUsers().containsKey(userId)) {
-            throw new UserNotFoundException(String.format("Пользователя c id %d нет", userId));
+            throw new UserNotFoundException(String.format(Constants.USER_NOT_EXIST, userId));
         }
         if (!inMemoryUserStorage.getUsers().containsKey(friendId)) {
-            throw new UserNotFoundException(String.format("Пользователя c id %d нет", friendId));
+            throw new UserNotFoundException(String.format(Constants.USER_NOT_EXIST, friendId));
         }
         User user = inMemoryUserStorage.getUsers().get(userId);
         User friend = inMemoryUserStorage.getUsers().get(friendId);
-        user.setFriends(friend);
-        friend.setFriends(user);
-        return String.format("Пользователь %s и пользователь %s теперь друзья", user.getName(), friend.getUserId());
+        user.addFriends(friend);
+        friend.addFriends(user);
+        return String.format("Пользователь %s и пользователь %s теперь друзья", user.getName(), friend.getName());
 
     }
 
     // удаление из друзей
     public String removeFriend(Integer userId, Integer friendId) {
         if (!inMemoryUserStorage.getUsers().containsKey(userId)) {
-            throw new UserNotFoundException(String.format("Пользователя c id %d нет", userId));
+            throw new UserNotFoundException(String.format(Constants.USER_NOT_EXIST, userId));
         }
         if (!inMemoryUserStorage.getUsers().containsKey(friendId)) {
-            throw new UserNotFoundException(String.format("Пользователя c id %d нет", friendId));
+            throw new UserNotFoundException(String.format(Constants.USER_NOT_EXIST, friendId));
         }
         User user = inMemoryUserStorage.getUsers().get(userId);
         User friend = inMemoryUserStorage.getUsers().get(friendId);
-        user.getFriends().remove(friend);
-        friend.getFriends().remove(user);
-        return String.format("Пользователь %s удалён из друзей", friend.getUserId());
+        if (user.getFriends().containsKey(friendId) && user.getFriends().containsKey(userId)) {
+            user.getFriends().remove(friendId);
+            friend.getFriends().remove(userId);
+            return String.format("Пользователь %s удалён из друзей", friend.getUserId());
+        }
+        return String.format("Пользователь c ID %d не является другом пользователя id %d", user.getUserId(), friend.getUserId());
 
     }
 
     // вывод списка общих друзей
-    public List<User> getCommonFriends(Integer userId, Integer otherId) throws UserNotFoundException {
+    public Map<Integer, String> getCommonFriends(Integer userId, Integer otherUserId) throws UserNotFoundException {
         validationUser.checkUserById(userId);
-        validationUser.checkUserById(otherId);
-        Set<User> userFriends = inMemoryUserStorage.getUsers().get(userId).getFriends();
-        Set<User> otherUserFriends = inMemoryUserStorage.getUsers().get(otherId).getFriends();
-        return userFriends.stream()
-                          .filter(otherUserFriends::contains)
-                          .collect(Collectors.toList());
+        validationUser.checkUserById(otherUserId);
+        Map<Integer, String> commonFriends = new HashMap<>();
+        Map<Integer, String> userFriends = inMemoryUserStorage.getUsers().get(userId).getFriends();
+        Map<Integer, String> otherUserFriends = inMemoryUserStorage.getUsers().get(otherUserId).getFriends();
+        List<Integer> commonListFriends = userFriends.keySet().stream()
+                                                     .filter(otherUserFriends::containsKey)
+                                                     .toList();
+        commonListFriends.forEach(u -> commonFriends.put(u, inMemoryUserStorage.getUsers().get(u).getLogin()));
+        return commonFriends;
 
+    }
+
+    // получение списка друзей пользователя
+    public Map<Integer, String> getUserFriendById(Integer id) {
+        validationUser.checkUserById(id);
+        return inMemoryUserStorage.getUsers().get(id).getFriends();
     }
 
 
